[package]
name = "monkey"
version = "0.1.0"
authors = ["Pietro Atzeni <pietrino.atzeni@moneyfarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "*"
clap = "*"
intertrait = "0.2"
linkme = "0.2"
num-traits = "0.2"
num-derive = "0.2"